# AMD___logslop

./: README.md  pyproject.toml
.github/workflows/: release-trusted-publisher.yml  test.yml
